# EveryDayWork

./: CMakeLists.txt  EveryDayWork.md  main.cpp  sscanfTest.cpp
ch1-2/: 100000568H.cpp  sscanfTest.cpp
ch3/: PAT_B1001.cpp  PAT_B1009.cpp  PAT_B1032.cpp  PAT_B1036.cpp  codeup1928.cpp
ch4/: NInM.cpp  NQueen.cpp  PAT_B1020.cpp  PAT_B1023.cpp  PAT_B1040.cpp  choosePointFromArea.cpp  cutSticks.cpp  fullPermutation.cpp  mergeSort.cpp  quickSort.cpp  randSelect.cpp  stringInString.cpp
ch5/: Fraction.cpp  PAT_A1059.cpp  PAT_B1019.cpp  bigNumber.cpp  extendGcd.cpp  prime.cpp
ch6/: STL_pair.cpp  STL_vector.cpp  lower_upper_bound.cpp  next_permutation.cpp
ch7/: PAT_A1032.cpp  PAT_A1052.cpp  calculate.cpp  link_node.cpp
ch8/: BFS_example.cpp  BFS_miGong.cpp  maxValue.cpp
ch9/: AVL.cpp  BinSearchTree.cpp  Binarytree.cpp  PAT_A1043.cpp  PAT_A1053.cpp  bingChaJi.cpp  friend.cpp  heap.cpp  huffman.cpp
