cmake_minimum_required(VERSION 3.12)
project(EveryDayWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(EveryDayWork ch1-2/100000568H.cpp ch1-2/sscanfTest.cpp ch3/PAT_B1001.cpp ch3/PAT_B1032.cpp ch3/PAT_B1036.cpp ch3/codeup1928.cpp ch3/PAT_B1009.cpp ch4/NInM.cpp ch4/stringInString.cpp ch4/fullPermutation.cpp ch4/NQueen.cpp ch4/PAT_B1020.cpp ch4/PAT_B1023.cpp ch4/choosePointFromArea.cpp)