cmake_minimum_required(VERSION 3.12)
project(EveryDayWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(EveryDayWork ch1-2/100000568H.cpp ch1-2/sscanfTest.cpp ch3/PAT_B1001.cpp ch3/PAT_B1032.cpp ch3/PAT_B1036.cpp ch3/codeup1928.cpp ch3/PAT_B1009.cpp ch4/NInM.cpp ch4/stringInString.cpp ch4/fullPermutation.cpp ch4/NQueen.cpp ch4/PAT_B1020.cpp ch4/PAT_B1023.cpp ch4/choosePointFromArea.cpp ch4/cutSticks.cpp ch4/mergeSort.cpp ch4/quickSort.cpp ch4/PAT_B1040.cpp ch4/randSelect.cpp ch5/PAT_B1019.cpp ch5/Fraction.cpp ch5/prime.cpp ch5/PAT_A1059.cpp ch5/bigNumber.cpp ch5/extendGcd.cpp ch6/STL_vector.cpp ch6/STL_pair.cpp ch6/next_permutation.cpp ch6/lower_upper_bound.cpp ch7/calculate.cpp ch7/link_node.cpp ch7/PAT_A1032.cpp ch7/PAT_A1052.cpp ch8/DFS_example.cpp ch8/BFS_example.cpp ch8/BFS_miGong.cpp ch9/Binarytree.cpp ch9/PAT_A1053.cpp ch9/BinSearchTree.cpp)